default/objects/OSAgentMapping__c/OSAgentMapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>OpenScape Agent Mapping</label>
</CustomObject>