default/objects/OSAgentMapping__c/fields/Agent_Extension__c.field-meta.xml
<CustomField>
    <fullName>Agent_Extension__c</fullName>
    <label>Agent Extension</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>
    