default/objects/OSAgentMapping__c/fields/Save_Debug_Log__c.field-meta.xml
<CustomField>
    <fullName>Save_Debug_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable to save debug log to Unify CC Log Storage big object</description>
    <label>Save Debug Log</label>
    <type>Checkbox</type>
</CustomField>