default/objects/OSAgentMapping__c/fields/Show_Debug_Log__c.field-meta.xml
<CustomField>
    <fullName>Show_Debug_Log__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable to show debug output in browser Dev console</description>
    <label>Show Debug Log</label>
    <type>Checkbox</type>
</CustomField>